--- a/.env.template
+++ b/.env.template
@@ -1,8 +1,8 @@
-TF_VAR_ibmcloud_region="us-south"
-TF_VAR_ibmcloud_resource_group="default"
-TF_VAR_resources_prefix="blog-sample"
-TF_VAR_reply_to_email="no-reply@example.com"
-TF_VAR_reply_to_name="John Doe on IBM Cloud"
-TF_VAR_send_to_email="john.doe@example.com"
-TF_VAR_sms_phone_number="<your cell phone number, i.e. +16105551212>"
-TF_VAR_ibmcloud_api_key=<your API key>
+export TF_VAR_ibmcloud_region="us-south"
+export TF_VAR_ibmcloud_resource_group="default"
+export TF_VAR_resources_prefix="blog-sample"
+export TF_VAR_reply_to_email="no-reply@example.com"
+export TF_VAR_reply_to_name="John Doe on IBM Cloud"
+export TF_VAR_send_to_email="john.doe@example.com"
+export TF_VAR_sms_phone_number="<your cell phone number, i.e. +16105551212>"
+export TF_VAR_ibmcloud_api_key=<your API key>
